--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,7 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
-    <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVzE_dUQuFDCTq5dXGYztOiz4YJbe4yjM&libraries=places"></script>
+    <!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVzE_dUQuFDCTq5dXGYztOiz4YJbe4yjM&libraries=places"></script> -->
 
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
